fix: Should fix lan rendering, lan riding and sleeping on treasures. Closes #152 #145